# gigapixel-goblin

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CODE_QUALITY_AUDIT.md  CONFIG.md  Dockerfile  GEMINI.md  Makefile  PR_DESCRIPTION.md  README.md  RESULTS-CLEANUP.md  TECH_DEBT_P1.md  TECH_DEBT_P2.md  TECH_DEBT_P3.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
archive/bugs/BUG-001-boundary-crop-no-handling/: index.html
archive/bugs/BUG-002-spec-contradiction-upsample-small-regions/: index.html
archive/bugs/BUG-003-huge-region-no-protection/: index.html
archive/bugs/BUG-004-missing-integration-tests/: index.html
archive/bugs/BUG-005-single-level-slide-untested/: index.html
archive/bugs/BUG-007-entire-test-suite-mocked/: index.html
archive/bugs/BUG-008-api-keys-silent-none/: index.html
archive/bugs/BUG-009-font-loading-silent-fallback/: index.html
archive/bugs/BUG-010-mpp-nullable-no-guards/: index.html
brainstorming/research-agent-sdks-vs-raw-api/: index.html
bugs/: index.html
concepts/algorithm/: index.html
concepts/architecture/: index.html
concepts/llm-integration/: index.html
concepts/overview/: index.html
data-acquisition/: index.html
data/multipathqa/: DATASET_CARD.md  MultiPathQA.csv
data/wsi/: README.md  gtex_files.txt  panda_files.txt  tcga_files.txt
development/contributing/: index.html
development/testing/: index.html
docs/: DATA_ACQUISITION.md  data-acquisition.md  index.md
docs/_bugs/: BUG-040-benchmark-underperformance-audit.md  BUG-041-paper-fidelity-fixed-iteration-enforcement-missing.md  BUG-042-paper-fidelity-patch-baseline-not-majority-vote.md  BUG-043-invalid-region-retry-premature-exit.md  README.md
docs/_specs/: BUG-040-P1-2-openai-stepresponse-schema-hardening.md  README.md
docs/bugs/: BUG-001-boundary-crop-no-handling.md  BUG-001-empty-huggingface-token.md  BUG-002-spec-contradiction-upsample-small-regions.md  BUG-003-huge-region-no-protection.md  BUG-004-missing-integration-tests.md  BUG-005-single-level-slide-untested.md  BUG-006-coordinate-overflow-potential.md  BUG-007-entire-test-suite-mocked.md  BUG-008-api-keys-silent-none.md  BUG-009-font-loading-silent-fallback.md  BUG-010-mpp-nullable-no-guards.md  BUG-011-unused-geometry-validator.md  BUG-012-download-silent-auth.md  BUG-013-silent-zero-cost-on-missing-usage.md  BUG-014-env-secrets-management.md  BUG-016-agent-allows-crop-when-max-steps-is-1.md  BUG-018-missing-conch-integration.md  BUG-019-silent-font-fallback.md  BUG-020-placeholder-prompts.md  BUG-022-multipathqa-ux.md  BUG-023-magic-numbers-overlay.md  BUG-026-model-id-scattered-config.md  BUG-029-low-tcga-accuracy.md  BUG-033-make-benchmark-uses-wrong-cli-args.md  BUG-034-default-tests-trigger-live-api.md  BUG-035-cli-tracebacks-leak-secrets.md  BUG-036-wsi-readme-verification-gdc-layout.md  BUG-037-data-acquisition-verification-no-pandas.md  BUG-038-B10-unknown-action-type.md  BUG-038-B11-comment-fix.md  BUG-038-B12-empty-message-content.md  BUG-038-B3-json-extraction.md  BUG-038-B4-anthropic-json-parsing.md  BUG-038-B5-token-count-none.md  BUG-038-B7-retry-counter-logic.md  BUG-038-B8-empty-base64.md  BUG-038-B9-recursive-retry.md  BUG-038-comprehensive-audit.md  BUG-038-panda-answer-extraction.md  BUG-039-backlog.md  (+3 more)
docs/concepts/: algorithm.md  architecture.md  llm-integration.md  overview.md
docs/data/: dataset-card.md
docs/development/: contributing.md  testing.md
docs/getting-started/: first-benchmark.md  installation.md  quickstart.md
docs/guides/: configuring-providers.md  running-benchmarks.md  running-inference.md  visualizing-trajectories.md
docs/models/: MODEL_REGISTRY.md  model-registry.md
docs/prompts/: PROMPT_DESIGN.md  prompt-design.md
docs/reference/: cli.md  configuration.md  project-structure.md
docs/results/: benchmark-results.md
docs/specs/: README.md  spec-01-foundation.md  spec-02-wsi-data.md  spec-03-coordinates.md  spec-04-level-selection.md  spec-05-cropping.md  spec-05.5-wsi-integration-checkpoint.md  spec-06-llm-provider.md  spec-07-navigation-prompt.md  spec-08-context-manager.md  spec-08.5-llm-integration-checkpoint.md  spec-09-giant-agent.md  spec-10-evaluation.md  spec-11-clam-integration.md  spec-11.5-e2e-validation-checkpoint.md  spec-12-cli-api.md
docs/validation/: E2E-VALIDATION-2025-12-20.md
getting-started/first-benchmark/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/configuring-providers/: index.html
guides/running-benchmarks/: index.html
guides/running-inference/: index.html
guides/visualizing-trajectories/: index.html
models/model-registry/: index.html
prompts/prompt-design/: index.html
reference/cli/: index.html
reference/configuration/: index.html
reference/project-structure/: index.html
results/benchmark-results/: index.html
scripts/: rescore_all.py
search/: search_index.json
specs/: index.html
specs/spec-01-foundation/: index.html
specs/spec-02-wsi-data/: index.html
specs/spec-03-coordinates/: index.html
specs/spec-04-level-selection/: index.html
specs/spec-05-cropping/: index.html
specs/spec-05.5-wsi-integration-checkpoint/: index.html
specs/spec-06-llm-provider/: index.html
specs/spec-07-navigation-prompt/: index.html
specs/spec-08-context-manager/: index.html
specs/spec-08.5-llm-integration-checkpoint/: index.html
specs/spec-09-giant-agent/: index.html
specs/spec-10-evaluation/: index.html
specs/spec-11-clam-integration/: index.html
specs/spec-11.5-e2e-validation-checkpoint/: index.html
specs/spec-12-cli-api/: index.html
src/giant/: __init__.py  config.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_download.py  test_logging.py
validation/e2e-validation-2025-12-20/: index.html
(+206 files in other folders)
