[project]
name = "giant"
version = "0.1.0"
description = "Gigapixel Image Agent for Navigating Tissue"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "GIANT Team" }]
keywords = ["pathology", "wsi", "llm", "agent", "gigapixel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    # Core WSI handling (Dec 2025: v1.4.3)
    "openslide-python>=1.4.3",
    "openslide-bin>=4.0.0.10",
    # Config & validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
    # CLI (Dec 2025: v0.20.0)
    "typer>=0.20.0",
    # Numerics
    "numpy>=2.2.6,<2.4.0",
    "pillow>=12.0.0",
    # LLM APIs
    "anthropic>=0.75.0",
    "openai>=2.13.0",
    "tenacity>=9.1.2",
    "httpx>=0.28.1",
    # Data & HuggingFace (Dec 2025: datasets v4.4.1)
    "datasets>=4.4.1",
    "huggingface_hub>=1.2.3",
    # Computer Vision (for CLAM-style segmentation)
    "opencv-python>=4.12.0.88",
    "scipy>=1.16.3",
    "scikit-image>=0.25.2",
    # Caching (persistent crop/metadata cache)
    "diskcache>=5.6.3",
    # Rate limiting for concurrent API calls
    "aiolimiter>=1.2.1",
    # DevEx
    "rich>=14.2.0",
    "tqdm>=4.67.1",
    "pydicom>=3.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-randomly>=4.0.1",
    "pytest-watch>=4.2.0",
    "pytest-timeout>=2.4.0",
    "pytest-benchmark>=5.2.3",
    "mutmut>=3.4.0",
    "hypothesis>=6.148.7",
    "respx>=0.22.0",
    "tifffile>=2025.12.12",
    "polyfactory>=3.1.0",
    "faker>=38.2.0",
    "mypy>=1.19.1",
    "ruff>=0.14.9",
    "pre-commit>=4.5.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "pymdown-extensions>=10.15",
    "types-Pillow>=10.2.0.20240822",
]

[project.scripts]
giant = "giant.cli.main:app"

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/giant"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004",  # Allow magic numbers in tests
    "N801",     # Allow test class names with numbers (e.g., TestP0_1_...)
    "PLC0415",  # Allow imports inside tests
    "RUF001",   # Allow ambiguous Unicode (intentional in Unicode tests)
]
"tests/integration/**/*.py" = ["E501"]  # Allow long lines in integration test mock data
"src/giant/llm/pricing.py" = ["PLR0913"]  # Allow many args for calculate_total_cost
"src/giant/prompts/templates.py" = ["E501"]  # Prompt templates need readable lines

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "cost: live API tests (opt-in, may spend money)",
    "integration: integration tests requiring real WSI files (skipped if no test file)",
    "mock: tests using mocked HTTP responses",
    "live: tests requiring real API keys",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["giant"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "except ImportError",
]
omit = [
    # CLI integration code that requires real LLM/WSI resources
    "src/giant/cli/runners.py",
    "src/giant/core/baselines.py",
    "src/giant/eval/runner.py",
]

[tool.mutmut]
paths_to_mutate = ["src/giant"]
pytest_add_cli_args = ["-q"]
pytest_add_cli_args_test_selection = ["tests/unit"]
